Added some items to wardrobe
This table will serve as the data base!

--- a/wardrobe.html
+++ b/wardrobe.html
@@ -35,27 +35,121 @@
       <td>ON</td>
       <td>50</td>
       <td>Summer</td>
-      <td>20</td>
       <td>Wite</td>
       <td>Shirt</td>
       <td>Casual</td>
+      <td></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
-      
     </tr>
     <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      
+      <td>2</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>Summer</td>
+      <td>green</td>
+      <td>T-Shirt</td>
+      <td>casual</td>
+      <td></td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
+    <tr>
+      <td>3</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>Summer</td>
+      <td>Black</td>
+      <td>skirts</td>
+      <td>formal</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>Summer</td>
+      <td>Orange</td>
+      <td>skirts</td>
+      <td>casual</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>All seasons</td>
+      <td>Blue</td>
+      <td>jackets</td>
+      <td>formal</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>  
+    <tr>
+      <td>6</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>winter</td>
+      <td>Pink</td>
+      <td>scarves</td>
+      <td>casual</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>All seasons</td>
+      <td>Black</td>
+      <td>pants</td>
+      <td>work</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>8</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>All seasons</td>
+      <td>LightBlue</td>
+      <td>jeans</td>
+      <td>casual</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr> 
+    <tr>
+      <td>9</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>All seasons</td>
+      <td>red</td>
+      <td>ties</td>
+      <td>work</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>10</td>
+      <td>ON</td>
+      <td>50</td>
+      <td>winter</td>
+      <td>brown</td>
+      <td>caots</td>
+      <td>general</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>         
   </tbody>
 </table>
 </div>
