Added the Home button

--- a/Main.html
+++ b/Main.html
@@ -6,7 +6,7 @@
 <style>
 #menu{
 	align-content:center;
-	width:700px;
+	width:1000px;
 	height:45px;
 	font-size:16px;
 	font-family:Tahoma,Geneva,sens-serif;
@@ -43,6 +43,7 @@
 
 <div id="menu">
 	<ul>
+    	<li><a href="Main.html">Home</a></li>
     	<li><a href="today.html">Today's Weather</a></li>
         <li><a href="Events.html">Events</a></li>
         <li><a href="wardrobe.html">My Wardrobe</a></li>	
