--- a/Events.html
+++ b/Events.html
@@ -10,17 +10,111 @@
 		width:85px;
 		height:45px;
 	}
-	
-		
+
+#menu{
+	align-content:center;
+	width:1000px;
+	height:45px;
+	font-size:16px;
+	font-family:Tahoma,Geneva,sens-serif;
+	font-weight:bold;
+	text-align:center;
+	text-shadow:3px 2px 3px #333333;
+	background-color:#8AD9FF;
+	border-radius:8px;
+}
+#menu ul{
+	height:auto;
+	padding:8px 0px;
+	margin:0px;
+}
+#menu li{
+	display:inline;
+	padding:20px;
+}
+#menu a{
+	text-decoration:none;
+	color:#000000;
+	padding:8px 8px 8px 8px;
+}
+#menu a:hover{
+	color:#F90;
+	background-color:#FFF;
+	}		
 </style>
 </head>
 
 <body>
 
+
+
+<div id="menu">
+	<ul>
+    	<li><a href="Main.html">Home</a></li>
+    	<li><a href="today.html">Today's Weather</a></li>
+        <li><a href="Events.html">Events</a></li>
+        <li><a href="wardrobe.html">My Wardrobe</a></li>	
+        <li><a href="#">Somthing Else</a></li>       
+    </ul>
+</div>
+
 <div id="NewEvent">
 	<button type="button" onClick= "location.href='NewEvent.html';"> New Event</button>
 </div>
 
+<table width="200" border="2" cellspacing="3" cellpadding="1">
+  <tbody>
+    <tr>
+      <th scope="col">&nbsp;</th>
+      <th scope="col">&nbsp;</th>
+      <th scope="col">&nbsp;</th>
+      <th scope="col">&nbsp;</th>
+      <th scope="col">&nbsp;</th>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
 
 
 
