Adding the WhatClothes sheet
It's the logic operator of  Smart Wardrobe.
It selects appropriate clothing for the relevant event.

--- a/Events.html
+++ b/Events.html
@@ -40,7 +40,13 @@
 #menu a:hover{
 	color:#F90;
 	background-color:#FFF;
-	}		
+	}
+	
+.Events{
+	backgroundcolor: blue; 
+	margin-left:250px;
+	margin-top:20px;	
+}
 </style>
 </head>
 
@@ -54,7 +60,7 @@
     	<li><a href="today.html">Today's Weather</a></li>
         <li><a href="Events.html">Events</a></li>
         <li><a href="wardrobe.html">My Wardrobe</a></li>	
-        <li><a href="#">Somthing Else</a></li>       
+        <li><a href="WhatClothes.html">What Clothes?</a></li>       
     </ul>
 </div>
 
@@ -62,30 +68,19 @@
 	<button type="button" onClick= "location.href='NewEvent.html';"> New Event</button>
 </div>
 
-<table width="200" border="2" cellspacing="3" cellpadding="1">
+<div class="Events">
+<table width="60%" border="2" cellspacing="3" cellpadding="1">
   <tbody>
     <tr>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
-      <th scope="col">&nbsp;</th>
+      <th scope="col">Date</th>
+      <th scope="col">Start Time</th>
+      <th scope="col">Finish Time</th>
+      <th scope="col">Dress Code</th>
+      <th scope="col">Clothes prefrance</th>
+      <th scope="col">Location</th>  
     </tr>
     <tr>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-      <td>&nbsp;</td>
-    </tr>
-    <tr>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -98,6 +93,15 @@
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
       <td>&nbsp;</td>
@@ -105,8 +109,18 @@
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
+      <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
@@ -115,7 +129,7 @@
     </tr>
   </tbody>
 </table>
-
+</div>
 
 
 
