--- a/Main.html
+++ b/Main.html
@@ -47,7 +47,7 @@
     	<li><a href="today.html">Today's Weather</a></li>
         <li><a href="Events.html">Events</a></li>
         <li><a href="wardrobe.html">My Wardrobe</a></li>	
-        <li><a href="#">Somthing Else</a></li>       
+        <li><a href="WhatClothes.html">What Clothes?</a></li>       
     </ul>
 </div>
 
