--- a/WhatClothes.html
+++ b/WhatClothes.html
@@ -2,8 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Today's Weather</title>
+<title>What Clothes?</title>
 <style>
+	#NewEvent{
+		margin-left: 1300px;
+		margin-top: 20px;
+		width:85px;
+		height:45px;
+	}
+
 #menu{
 	align-content:center;
 	width:1000px;
@@ -34,11 +41,17 @@
 	color:#F90;
 	background-color:#FFF;
 	}
+	
+.Events{
+	backgroundcolor: blue; 
+	margin-left:250px;
+	margin-top:20px;	
+}
 </style>
 </head>
 
-<body>
 
+<body>
 <div id="menu">
 	<ul>
     	<li><a href="Main.html">Home</a></li>
@@ -48,11 +61,30 @@
         <li><a href="WhatClothes.html">What Clothes?</a></li>       
     </ul>
 </div>
-<br>
-IT's sunny today
 
-<div id="temp">
-29
-</div>
+<script>
+var tmp = 0;
+var humid = 0;
+
+if(tmp < 20){
+	Cold	
+}else if (tmp >= 20 && tmp < 40){
+	Warm
+}else if(tmp >= 40){
+	Hot!
+}
+
+if(humid < 20){
+
+}else if(humid >= 20 && humid < 40){
+	
+}else if(humid >= 40 && humid < 60){
+	
+}else if(humid >= 60 && humid < 80){
+	
+}else if(humid >= 80 && humid <= 100){
+	
+}
+</script>
 </body>
 </html>
